/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.3.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java'
    id 'io.freefair.lombok' version '6.6.3'
    id 'com.diffplug.spotless' version '6.17.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'

    implementation 'org.slf4j:slf4j-api:2.0.6'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.5'

    // IF USING SCHEDULER
    implementation 'org.quartz-scheduler:quartz:2.3.2'
}

application {
    // Define the main class for the application.
    mainClass = 'app.dependency.update.App'
}

jar {
    archiveFileName = 'app-dependency-update.jar'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes "Main-Class": "app.dependency.update.App"
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

spotless {
    java {
        removeUnusedImports()
        googleJavaFormat()
    }
}
